client/src/App.css
#root {
  margin: 50px;
}

.background {
  color: #000000;
  background-image: url("./images/Listeningtorecords.jpeg") ;
  text-align: center;
  background-repeat: no-repeat;
  background-position: center;
  background-size: 100% 100%;
  width: 100%;
  height: 100%;
  object-fit: contain;
}
.about-title{

  color: azure;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}
.about {
  margin: 30px 0px 0px 15px;
  font-size: 30px;
}

.story{
  width: 50%;
  margin:10px 45px ;

}
.wishlistbox {
  display: flex;
  flex-wrap: wrap;
}
.atc {
  background-color: rgb(84, 84, 90);
  width: 100px;
  height: 40px;
  color: azure;
  margin: 0px 0px 60px;
}
.wluser {
  font-size: 40px;
}

.password {
  padding-left: 0px !important;
}
.media{
  height: 800px;
}
.slogan {
  padding-bottom: 50px;
}

